defconfig: add rtl8367 support and removed some unnecessary options

--- a/arch/arm64/configs/mt7622_bpi-r64_defconfig
+++ b/arch/arm64/configs/mt7622_bpi-r64_defconfig
@@ -133,6 +133,7 @@ CONFIG_NET_MEDIATEK_SOC=y
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 CONFIG_ICPLUS_PHY=y
 CONFIG_REALTEK_PHY=y
+CONFIG_RTL8367S_GSW=y
 CONFIG_USB_CATC=y
 CONFIG_USB_KAWETH=y
 CONFIG_USB_PEGASUS=y
@@ -166,7 +167,7 @@ CONFIG_USB_VL600=y
 CONFIG_USB_NET_CH9200=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=y
+#CONFIG_INPUT_EVBUG=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
@@ -215,7 +216,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_MT6323=y
 CONFIG_REGULATOR_MT6380=y
-CONFIG_RC_CORE=y
+#CONFIG_RC_CORE=y
 CONFIG_RC_DEVICES=y
 CONFIG_IR_MTK=y
 CONFIG_MEDIA_SUPPORT=y
@@ -236,7 +237,7 @@ CONFIG_LEDS_TRIGGER_ONESHOT=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_LEDS_TRIGGER_CPU=y
-CONFIG_LEDS_TRIGGER_ACTIVITY=y
+#CONFIG_LEDS_TRIGGER_ACTIVITY=y
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_MT7622=y
