[mt76] add MT76-driver from openwrt

--- a/arch/arm/configs/mt7623n_evb_fwu_defconfig
+++ b/arch/arm/configs/mt7623n_evb_fwu_defconfig
@@ -663,3 +663,5 @@ CONFIG_COMMON_CLK_MT2701_IMGSYS=y
 CONFIG_COMMON_CLK_MT2701_VDECSYS=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_DRM_FBDEV_EMULATION=y
+
+CONFIG_MT76x2E=m
