--- a/drivers/net/wireless/mediatek/Kconfig
+++ b/drivers/net/wireless/mediatek/Kconfig
@@ -11,5 +11,6 @@ config WLAN_VENDOR_MEDIATEK
 
 if WLAN_VENDOR_MEDIATEK
 source "drivers/net/wireless/mediatek/mt7601u/Kconfig"
-source "drivers/net/wireless/mediatek/mt76/Kconfig"
+#source "drivers/net/wireless/mediatek/mt76/Kconfig"
+source "drivers/net/wireless/mediatek/mt76_new/Kconfig"
 endif # WLAN_VENDOR_MEDIATEK
