[defconfig] add gpio-sysfs and vfat

--- a/arch/arm64/configs/mt7622_bpi-r64_defconfig
+++ b/arch/arm64/configs/mt7622_bpi-r64_defconfig
@@ -259,6 +259,7 @@ CONFIG_PWM_MEDIATEK=y
 CONFIG_PHY_MTK_TPHY=y
 CONFIG_MTK_EFUSE=y
 CONFIG_EXT4_FS=y
+CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 # CONFIG_MISC_FILESYSTEMS is not set
 CONFIG_PRINTK_TIME=y
@@ -274,3 +275,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_FTRACE is not set
 CONFIG_CRYPTO_ECHAINIV=y
+
+CONFIG_GPIO_SYSFS=y
+CONFIG_NLS_CODEPAGE_437=y
+CONFIG_NLS_ISO8859_1=y
