--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: c
 compiler:
     - gcc
 sudo: required
-dist: trusty
+dist: bionic
 cache: ccache
 
 git:
-  depth: false
+  depth: 10
   quiet: false
   
 if: tag IS blank
