--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ before_deploy:
     # Set up git user name and tag this commit
     - git config --local user.name "Frank Wunderlich"
     - git config --local user.email "frank-w@public-files.de"
-    - git tag "CI-BUILD-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)"
+    - export TRAVIS_TAG=${TRAVIS_TAG:-"CI-BUILD-$(date +'%Y%m%d_%H%M%S')-$(git log --format=%h -1)"}
+    - git tag $TRAVIS_TAG
 deploy:
     provider: releases
     api_key: $GITHUB_TOKEN
