--- a/arch/arm/configs/mt7623n_evb_fwu_defconfig
+++ b/arch/arm/configs/mt7623n_evb_fwu_defconfig
@@ -544,6 +544,7 @@ CONFIG_USB_CONFIGFS_SERIAL=y
 #CONFIG_USB_CONFIGFS_RNDIS=y
 #CONFIG_USB_CONFIGFS_EEM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
+CONFIG_USB_PRINTER=m
 
 CONFIG_HID=y
 CONFIG_HIDRAW=y
