dts64: disable hp-detect gpio as it does not work alone

--- a/arch/arm64/boot/dts/rockchip/rk3568-bpi-r2-pro.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-bpi-r2-pro.dts
@@ -135,7 +135,7 @@
 			"Headphones", "HPOL",
 			"Headphones", "HPOR",
 			"Speaker", "SPKO";
-		simple-audio-card,hp-det-gpio = <&gpio3 RK_PC2 GPIO_ACTIVE_LOW>; //HP_DET_L_GPIO3_C2
+		//simple-audio-card,hp-det-gpio = <&gpio3 RK_PC2 GPIO_ACTIVE_LOW>; //HP_DET_L_GPIO3_C2
 
 		simple-audio-card,cpu {
 			sound-dai = <&i2s1_8ch>;
