--- a/arch/arm64/configs/quartz64_defconfig
+++ b/arch/arm64/configs/quartz64_defconfig
@@ -1,3 +1,6 @@
+CONFIG_LOCALVERSION="-bpi-r2pro"
+CONFIG_LOCALVERSION_AUTO=n
+
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
@@ -166,17 +169,20 @@ CONFIG_RFKILL=y
 #CONFIG_NFC_NCI=m
 #CONFIG_NFC_S3FWRN5_I2C=m
 CONFIG_PCI=y
-CONFIG_PCIEPORTBUS=y
+#CONFIG_PCIEPORTBUS=y
 CONFIG_PCI_DEBUG=y
-CONFIG_PCI_REALLOC_ENABLE_AUTO=y
+#CONFIG_PCI_REALLOC_ENABLE_AUTO=y
 #CONFIG_PCI_IOV=y
 #CONFIG_PCI_PASID=y
-CONFIG_HOTPLUG_PCI=y
-CONFIG_HOTPLUG_PCI_ACPI=y
+#CONFIG_HOTPLUG_PCI=y
+#CONFIG_HOTPLUG_PCI_ACPI=y
 CONFIG_PCI_HOST_GENERIC=y
-CONFIG_PCIE_DW_PLAT_HOST=y
-CONFIG_PCIE_ROCKCHIP_DW_HOST=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_PCIE_ROCKCHIP_HOST=y
+#CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCI_ENDPOINT=y
+CONFIG_PCIE_ROCKCHIP_EP=y
+CONFIG_PCIE_ROCKCHIP_DW_HOST=y
 #CONFIG_PCI_ENDPOINT_CONFIGFS=y
 #CONFIG_PCI_EPF_TEST=m
 CONFIG_DEVTMPFS=y
@@ -709,6 +715,7 @@ CONFIG_EDAC=y
 CONFIG_EDAC_GHES=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_RK808=y
+CONFIG_RTC_DRV_HYM8563=y
 #CONFIG_RTC_DRV_PCF85063=y
 #CONFIG_RTC_DRV_EFI=y
 CONFIG_DMADEVICES=y
@@ -798,6 +805,7 @@ CONFIG_PHY_ROCKCHIP_INNO_USB2=y
 #CONFIG_PHY_ROCKCHIP_INNO_DSIDPHY=y
 CONFIG_PHY_ROCKCHIP_NANENG_COMBO_PHY=y
 CONFIG_PHY_ROCKCHIP_PCIE=y
+CONFIG_PHY_ROCKCHIP_SNPS_PCIE3=y
 #CONFIG_PHY_ROCKCHIP_TYPEC=y
 CONFIG_PHY_ROCKCHIP_USB=y
 #CONFIG_ARM_SMMU_V3_PMU=m
@@ -881,7 +889,12 @@ CONFIG_MEMTEST=y
 
 CONFIG_REGULATOR_FAN53555=y
 
-CONFIG_NET_REALTEK_MDIO=y
-CONFIG_NET_DSA_REALTEK=y
-CONFIG_NET_DSA_REALTEK_MDIO=y
+#CONFIG_NET_REALTEK_MDIO=y
+#CONFIG_NET_DSA_REALTEK=y
+#CONFIG_NET_DSA_REALTEK_MDIO=y
 CONFIG_MT753X_GSW=y
+CONFIG_NET_DSA_MT7530=y
+
+CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
+
+CONFIG_RK_HEADSET=y
